--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,33 @@
 version: "3.1"
 services:
-  mojaPostgresBaza:
-    image: "jurerelja/or-fer"
-    container_name: mojaPostgresBaza
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=1234
+  frontend:
+    image: "jurerelja/or-fer:frontendv1"
     ports:
-      - "5435:5432"
+      - "5000:80"
+
+  backend:
+    image: "jurerelja/or-fer:backendv1"
+    ports:
+      - "3000:8080"
+    depends_on:
+      mojaPostgresBaza:
+        condition: service_healthy
+    environment:
+      - PORT=8080
+      - PGLINK=postgres://postgres:1234@mojaPostgresBaza:5432/ORbaza
+
+  mojaPostgresBaza:
+    image: "jurerelja/or-fer:latest"
+    container_name: mojaBazaSpremnik
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=1234
+      - POSTGRES_USER=postgres
+    expose:
+      - "5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
